<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@id/incomeView"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/income"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_weight="1"
            android:background="@drawable/bg_round_button"
            android:text="@string/income"
            android:textSize="27sp" />

        <Button
            android:id="@+id/expenditure"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:background="@drawable/bg_round_button2"
            android:text="@string/expenditure"
            android:textSize="27sp" />

    </LinearLayout>

    <TextView
        android:id="@+id/day"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="40dp"
        android:text="@string/date"
        android:textSize="38sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/incomeView" />

    <ImageView
        android:id="@+id/calendar"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="170dp"
        android:layout_marginTop="40dp"
        android:src="@drawable/calendar"
        app:layout_constraintStart_toEndOf="@id/day"
        app:layout_constraintTop_toBottomOf="@+id/incomeView" />


    <TextView
        android:id="@+id/marks"
        android:layout_width="wrap_content"
        android:layout_height="47dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="40dp"
        android:text="@string/remarks"
        android:textSize="38sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/day" />

    <TextView
        android:id="@+id/item"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="40dp"
        android:text="@string/item"
        android:textSize="38sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/marks" />

    <Spinner
        android:id="@+id/itemSpinner"
        android:layout_width="185dp"
        android:layout_height="40dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="45dp"
        android:background="@drawable/spinner_back"
        app:layout_constraintStart_toEndOf="@id/item"
        app:layout_constraintTop_toBottomOf="@+id/marks" />


    <TextView
        android:id="@+id/payFuntion"
        android:layout_width="wrap_content"
        android:layout_height="47dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="40dp"
        android:text="@string/payFuntion"
        android:textSize="38sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/item" />

    <Spinner
        android:id="@+id/paySpinner"
        android:layout_width="185dp"
        android:layout_height="40dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="45dp"
        android:background="@drawable/spinner_back"
        app:layout_constraintStart_toEndOf="@id/payFuntion"
        app:layout_constraintTop_toBottomOf="@+id/item" />

    <TextView
        android:id="@+id/money"
        android:layout_width="wrap_content"
        android:layout_height="47dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="40dp"
        android:text="@string/money"
        android:textSize="38sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/payFuntion" />

    <Button
        android:id="@+id/save"
        android:layout_width="110dp"
        android:layout_height="45dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/bg_round_button_nomel"
        android:text="@string/save"
        android:textColor="@color/white"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/money" />


</androidx.constraintlayout.widget.ConstraintLayout>