<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/total_assets"
        android:layout_width="287dp"
        android:layout_height="47dp"
        android:layout_marginTop="40dp"
        android:text="@string/total_assets"
        android:textSize="38sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <LinearLayout
        android:id="@+id/newBook"
        android:layout_width="244dp"
        android:layout_height="45dp"
        android:layout_centerVertical="true"
        android:layout_marginTop="35dp"
        android:background="@color/barGreen"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/total_assets">

        <TextView
            android:id="@+id/newTextBook"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="30dp"
            android:text="@string/traffic"
            android:textColor="@color/white"
            android:textSize="26sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/newView"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginTop="33dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/newBook">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:contentDescription="@string/add"
            android:src="@drawable/push" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="20dp"
            android:text="@string/add"
            android:textColor="@color/black"
            android:textSize="26sp" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>