<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/creamy＿white"
    >


    <View
        android:id="@+id/topBar"
        android:layout_width="wrap_content"
        android:layout_height="58dp"
        android:background="@color/barGreen"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/home"
        android:layout_width="53dp"
        android:layout_height="32dp"
        android:layout_marginTop="15dp"
        android:text="@string/home"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <FrameLayout
        android:id="@+id/fragmentLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/bottom_account"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/topBar" />


    <LinearLayout
        android:id="@+id/bottom_home"
        android:layout_width="0dp"
        android:layout_height="86dp"
        android:background="@color/white"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="w,1:1"
        app:layout_constraintEnd_toStartOf="@id/bottom_book"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="8dp"
            android:src="@drawable/home" />

        <TextView
            android:layout_width="45dp"
            android:layout_height="20dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/bttom_home"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/bottom_book"
        android:layout_width="0dp"
        android:layout_height="86dp"
        android:background="@color/white"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="w,1:1"
        app:layout_constraintEnd_toStartOf="@id/bottom_home"
        app:layout_constraintStart_toEndOf="@id/bottom_account">

        <ImageView
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="8dp"
            android:src="@drawable/book" />

        <TextView
            android:layout_width="45dp"
            android:layout_height="20dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/bttom_book"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/bottom_account"
        android:layout_width="0dp"
        android:layout_height="86dp"
        android:background="@color/white"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="w,1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="8dp"
            android:src="@drawable/account" />

        <TextView
            android:layout_width="45dp"
            android:layout_height="20dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/bttom_account"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/bottom_analysis"
        android:layout_width="0dp"
        android:layout_height="86dp"
        android:background="@color/white"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="w,1:1"
        app:layout_constraintEnd_toStartOf="@id/bottom_setting"
        app:layout_constraintStart_toEndOf="@id/bottom_account">

        <ImageView
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="8dp"
            android:src="@drawable/analysis" />

        <TextView
            android:layout_width="45dp"
            android:layout_height="20dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/bttom_analysis"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/bottom_setting"
        android:layout_width="0dp"
        android:layout_height="86dp"
        android:background="@color/white"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="w,1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/bottom_analysis">

        <ImageView
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="8dp"
            android:src="@drawable/setting" />

        <TextView
            android:layout_width="45dp"
            android:layout_height="20dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/bttom_setting"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="16sp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>