<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/creamy＿white">

    <View
        android:id="@+id/topBar"
        android:layout_width="wrap_content"
        android:layout_height="58dp"
        android:background="@color/barGreen"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/home"
        android:layout_width="53dp"
        android:layout_height="32dp"
        android:layout_marginTop="15dp"
        android:text="@string/bttom_book"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/total_assets"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="總資產："
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topBar" />

    <RelativeLayout
        android:id="@+id/out_start_account"
        android:layout_width="373dp"
        android:layout_height="65dp"
        android:layout_marginTop="35dp"
        android:background="@color/barGreen"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/total_assets">

        <Button
            android:id="@+id/start_account"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/barGreen"
            android:enabled="false" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="交通：15000"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="35sp" />

        </LinearLayout>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/bottomBar"
        android:layout_width="match_parent"
        android:layout_height="83dp"
        android:background="@color/white"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <RelativeLayout
            android:id="@+id/bottom_home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/white">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:enabled="false" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="8dp"
                    android:src="@drawable/home" />

                <TextView
                    android:layout_width="45dp"
                    android:layout_height="20dp"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/bttom_home"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="18sp" />
            </LinearLayout>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/bottom_book"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/bottom_home">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@color/barGreen"
                android:enabled="false" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="8dp"
                    android:src="@drawable/book" />

                <TextView
                    android:layout_width="45dp"
                    android:layout_height="20dp"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/bttom_book"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="18sp" />
            </LinearLayout>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/bottom_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/bottom_book"
            android:background="@color/white">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:enabled="false" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="8dp"
                    android:src="@drawable/account" />

                <TextView
                    android:layout_width="45dp"
                    android:layout_height="20dp"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/bttom_account"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="18sp" />
            </LinearLayout>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/bottom_analysis"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/bottom_account"
            android:background="@color/white">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:enabled="false" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="8dp"
                    android:src="@drawable/analysis" />

                <TextView
                    android:layout_width="45dp"
                    android:layout_height="20dp"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/bttom_analysis"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="18sp" />
            </LinearLayout>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/bottom_setting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/bottom_analysis"
            android:background="@color/white">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:enabled="false" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="8dp"
                    android:src="@drawable/setting" />

                <TextView
                    android:layout_width="45dp"
                    android:layout_height="20dp"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/bttom_setting"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="18sp" />
            </LinearLayout>
        </RelativeLayout>


    </RelativeLayout>


</androidx.constraintlayout.widget.ConstraintLayout>